--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: kramdown
 
-description: Avi Aryan's resume
-title: Avi's resume
+description: Hansen's resume
+title: Hansen Sun's resume
 
 highlighter: rouge
 
